# arm920t-demo

./: .gitignore  CMakeLists.txt  README.md
cmake/: arm-linux-gnueabi.cmake
